<resources>
    <string name="app_name">E Branch</string>
    <string name="map_api_key">AIzaSyDahZQW7gLbt6P9g2zG6hHqaNnOjAUk48Y</string>
    <string name="code">code</string>
    <string name="sign_up2">Create Account</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="user_name">User name</string>
    <string name="user_password">password</string>
    <string name="user_email">Email</string>
    <string name="user_phone">Phone</string>
    <string name="register">Register</string>
    <string name="si_su">Sign in or create a new account .</string>
    <string name="new_user">Create new Account .</string>
    <string name="are_you_forgot_password">Forgot password ?</string>
    <string name="notifications">Notifications</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="field_req">Field required</string>
    <string name="back">back</string>
    <string name="inv_email">Invalid email</string>
    <string name="pass_short">Password to short</string>
    <string name="ch_city">Choose city</string>
    <string name="pass_equal_confirm">Password Must Equal Confirm Password</string>
    <string name="contact_the_store">Email  the store</string>
    <string name="offer">Offer</string>
    <string name="departments">Departments</string>
    <string name="more">More</string>
    <string name="best_seller">Best seller</string>
    <string name="write_market_name">Write Market Name</string>
    <string name="views">Views</string>
    <string name="send">send</string>
    <string name="messge">Messge</string>
    <string name="contact_us">Contact Us</string>
    <string name="home">Home</string>
    <string name="detials">Detials</string>
    <string name="amount">Amount</string>
    <string name="order">Order Now</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="setting">Setting</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="log_out">Log Out</string>
    <string name="edit">Edit</string>
    <string name="wait">Wait...</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="suc">Success !</string>
    <string name="no_products_to_display">No products To Display</string>
    <string name="no_department_to_display">No DepartMent To Display</string>
    <string name="real">r.s</string>
    <string name="language_settings">Language Settings</string>
    <string name="inc_phone_pas">Incorrect phone number or password</string>
    <string name="enter_the_sms_verification_code_below_that_was_sent_to_your_mobile_phone">Enter the SMS verification code below that was sent to your mobile phone</string>
    <string name="inc_code_verification">Incorrect code verification</string>
    <string name="you_will_receive_4_digit">You will receive 4 digit code on your mobile</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="enter_code">Enter code</string>
    <string name="we_ll_never_share_or_sell_your_phone_number_your_privacy_is_100_guaranteed">We\'ll never share or sell your phone number your privacy is 100% guaranteed.</string>
    <string name="inc_code">Incorrect code</string>
    <string name="em_exist">Email or Phone number is exist</string>
    <string name="market_name">Market Name</string>
    <string name="market_phone">Market Phone</string>
    <string name="price">Price</string>
    <string name="no_orders">No orders</string>
    <string name="current_order">Current Order</string>
    <string name="finish_order">Finish Order</string>
    <string name="product_name">Product Name</string>
    <string name="order_detilas">Order Detilas</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="location">Location</string>
    <string name="no_name">No Name</string>
    <string name="search">Search</string>
<string name="order_pref">You cannot order two stores at the same time</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit profile</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="total">Total : </string>
    <string name="home_delivery">Home delivery</string>
    <string name="receiving_from_branches">Receiving from branches</string>
    <string name="about">About App</string>
    <string name="no_notifications_to_display">No Notifications To Display</string>
    <string name="user_not_active">User not active</string>
    <string name="not_active_phone">Not activate phone number</string>
    <string name="reset_password">Reset Password</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="use_copoun">Use Copoun</string>
    <string name="Copun_stoped">Coupon Has stopped from admin</string>
    <string name="Copun_used">Coupon Has already Used by this user</string>
    <string name="copoun_notfound">Copoun Not Found</string>
    <string name="cart">cart</string>
    <string name="no_conversation">No conversation</string>
    <string name="chat">Chat</string>
    <string name="type_amessage">Type Amessage</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="order_accepted">Order Accepted Num</string>
    <string name="order_finsihed">The request has been successfully completed and you will be notified within two days of the application number</string>
    <string name="market_accept_order">Our dear customer, your order has been processed and shipping is being done number </string>
    <string name="market_refues_order">Dear Customer, We apologize for not carrying out your order. For more information, please contact the store on request number</string>
    <string name="driver_accept_order">Driver before your order, delivery will be made within 3 days of your order number</string>
    <string name="driver_recevie_order">Driver Reacive Order Num</string>
    <string name="driver_cancel_order">Driver Cancel Order Num</string>
    <string name="order_num">Order Num</string>
    <string name="accept_terms_and_conditions">Accept terms and conditions</string>
    <string name="collecting_order">collecting  order</string>
    <string name="driver_recevie_order_from_market">driver recevie order from market</string>
    <string name="order_collected">order collected</string>
    <string name="delivering_order">delivering order</string>
    <string name="delivering_order_to_your_destination">delivering order to your destination</string>
    <string name="order_delivered_successfully">order delivered successfully</string>
    <string name="we_are_pleased_to_serve_you">we are pleased to serve you</string>
    <string name="driver_accept_order1">driver accept your order</string>
    <string name="market_accept_order1">market_accept_order</string>
    <string name="drive_proportion">drive proportion</string>

</resources>
