<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="contactUs"
            type="com.creative.share.apps.ebranch.models.ContactUsModel" />

        <variable
            name="contactListener"
            type="com.creative.share.apps.ebranch.interfaces.Listeners.ContactListener" />

        <variable
            name="lang"
            type="String" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:fitsSystemWindows="true"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/user_name"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/linear_shape"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@={contactUs.name}"
                error="@{contactUs.error_name}"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/user_email"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/linear_shape"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:inputType="textEmailAddress"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@={contactUs.email}"
                error="@{contactUs.error_email}"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/user_phone"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/linear_shape"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:inputType="phone"
                android:text="@={contactUs.phone}"
                error="@{contactUs.error_phone}"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/messge"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/linear_shape"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="8dp"
                android:gravity="top"
                android:text="@={contactUs.message}"
                error="@{contactUs.error_message}"

                />
            <Button
                android:id="@+id/btnSend"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_login_bg"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/send"
                android:onClick="@{()->contactListener.sendContact(contactUs)}"
                />
        </LinearLayout>
    </ScrollView>

</layout>