<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="backListener"
            type="com.creative.share.apps.ebranch.interfaces.Listeners.BackListener" />

        <variable
            name="marketmodel"
            type="com.creative.share.apps.ebranch.models.OrderModel" />

        <variable
            name="lang"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/order_detilas"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:clickable="false"
                android:longClickable="false"
                android:onClick="@{()->backListener.back()}"
                android:padding="8dp"
                android:rotation='@{lang.equals("ar")?180:0}'
                android:src="@drawable/ic_right_arrow"
                android:tint="@color/white"

                />

        </androidx.appcompat.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"

                >

                <LinearLayout
                    android:id="@+id/ll_no_store"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:tint="@color/colorPrimary"

                        />

                    <TextView
                        android:id="@+id/tvNoEvents"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/no_products_to_display"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recMarket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>


                <ProgressBar
                    android:id="@+id/progBar"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp" />


            </FrameLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{marketmodel.driver.phone}"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"

                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/gray_circle"
                    android:src="@drawable/step_gray_true"
                    android:padding="13dp"
                    />
                <View
                    android:id="@+id/view1"
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/gray4"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/market_accept_order1"
                    android:textColor="@color/gray4"
                    android:textSize="17sp"

                    />

                <TextView
                    android:id="@+id/tv_order_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/market_accept_order"
                    android:textColor="@color/gray4"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/gray_circle"
                    android:padding="13dp"
                    android:src="@drawable/step_gray_list" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/gray4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_accept_order1"
                    android:textColor="@color/gray4"
                    android:textSize="17sp"

                    />

                <TextView
                    android:id="@+id/tv_order_id1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/driver_accept_order"
                    android:textColor="@color/gray4"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/gray_circle"
                    android:padding="13dp"
                    android:src="@drawable/step_gray_box" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/gray4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_collected"
                    android:textColor="@color/gray4"
                    android:textSize="17sp"

                    />

                <TextView
                    android:id="@+id/tv_order_id2"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/driver_recevie_order"
                    android:textColor="@color/gray4"
                    android:textSize="13sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image5"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/gray_circle"
                    android:padding="13dp"
                    android:src="@drawable/step_gray_heart"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_delivered_successfully"
                    android:textColor="@color/gray4"
                    android:textSize="17sp"

                    />

                <TextView
                    android:id="@+id/tv_order_id5"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/we_are_pleased_to_serve_you"
                    android:textColor="@color/gray4"
                    android:textSize="13sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>
        </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>