<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="lang"
            type="String" />
        <variable
            name="backListener"
            type="com.creative.share.apps.ebranch.interfaces.Listeners.BackListener"
            />
        <variable
            name="appdatamodel"
            type="com.creative.share.apps.ebranch.models.App_Data_Model" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:clickable="true"
    android:background="@color/gray0"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:longClickable="false"
            android:padding="13dp"
            android:src="@drawable/ic_right_arrow"
            android:tint="@color/white"

            android:rotation='@{lang.equals("en")?180:0}'
            android:onClick="@{()->backListener.back()}"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cart"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"

            />
    </androidx.appcompat.widget.Toolbar>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:fillViewport="true"

app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <FrameLayout
android:id="@+id/f2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray0"

        android:layout_marginBottom="8dp"
        >



        <LinearLayout
            android:id="@+id/ll_no_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
android:visibility="gone"
           >

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:tint="@color/colorPrimary"
                android:src="@drawable/cart"
                />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

    </FrameLayout>
    <TextView
        android:id="@+id/tv_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"

        android:checkedButton="@id/r_home"
       >


        <RadioButton
            android:id="@+id/r_branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/receiving_from_branches"

            android:theme="@style/MyRadioButton"

            />

        <RadioButton
            android:id="@+id/r_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/home_delivery"
            android:layout_marginTop="8dp"
            android:theme="@style/MyRadioButton"

            />
    </RadioGroup>
    <TextView
        android:id="@+id/tvcopon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/add_coupon"
        />
        <LinearLayout
            android:id="@+id/tv_derive"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:text='@{@string/drive_proportion(appdatamodel.drive_proportion)}'
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:text='@{appdatamodel.drive_proportion+""}'
            />
        </LinearLayout>
    <Button
        android:id="@+id/bt_com"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:text="@string/order"
    android:layout_gravity="center"

        android:background="@drawable/btn_login"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>
